fixed the spacing on different view ports

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -4,6 +4,9 @@
 .jumbotron{
     position:absolute;
     bottom:0;
+    width:100%;
+    padding: 2rem;
+    margin: 0px !important;
 }
 .lead{
     font-size: 12px;
