--- a/src/components/login/login.scss
+++ b/src/components/login/login.scss
@@ -4,8 +4,10 @@
     font-family: 'Roboto', sans-serif;
 }
 .container-fluid{
+    position: relative;
     height: 100vh !important;
-    width: 100vw !important;
+    // width: 100vw !important;
+    min-height:100% !important;
 }
 .content{
     border: none !important;
